# callusgs

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  NOTES  README.md  TODO  pyproject.toml
.github/workflows/: codeql.yml
callusgs/: __init__.py  api.py  cli.py  cli_funcs.py  errors.py  storage.py  types.py  utils.py
docs/: conf.py  index.rst  requirements.txt
docs/chapters/: callusgs.rst  cli.rst  cookbook.rst  modules.rst  setup.rst  user_guide.rst
tests/: test_utils.py
